--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
     <application
         android:usesCleartextTraffic="true"
         android:allowBackup="true"
-        android:icon="@drawable/quotable_icon"
+        android:icon="@mipmap/quotable_icon"
         android:label="@string/app_name"
         android:roundIcon="@drawable/quotable_icon"
         android:supportsRtl="true"
